# task-memo

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-07-08-task-memo-implementation.md
docs/superpowers/specs/: 2026-07-08-task-memo-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  shortcuts.rs  tray.rs
src-tauri/src/commands/: daily.rs  day.rs  library.rs  mod.rs  search.rs  tasks.rs
src-tauri/src/db/: connection.rs  migrations.rs  repositories.rs
src/app/: App.tsx  api.ts  routes.ts  types.ts
src/components/: DayTimeline.test.tsx  DayTimeline.tsx  LibraryTree.test.tsx  LibraryTree.tsx  MarkdownEditor.tsx  SearchBar.test.tsx  SearchBar.tsx  TaskEditor.tsx  TaskList.tsx
src/pages/: DailyDraft.test.tsx  DailyDraft.tsx  DayView.test.tsx  DayView.tsx  Library.test.tsx  Library.tsx  Search.test.tsx  Search.tsx  Today.test.tsx  Today.tsx
src/styles/: app.css  tokens.css
