[package]
name = "task-memo"
version = "0.1.0"
description = "Task Memo desktop app"
authors = ["Task Memo"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[lib]
name = "task_memo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
